# ChangeLog for www-client/uzbl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/uzbl/ChangeLog,v 1.5 2009/12/04 14:04:04 wired Exp $

  04 Dec 2009; Alex Alexander <wired@gentoo.org>
  files/uzbl-9999-makefile-cleanup.patch, files/uzbl-makefile-cleanup.patch:
  updated makefile patches to fix -j2+ install issue

  04 Dec 2009; Alex Alexander <wired@gentoo.org> uzbl-0_pre20091107.ebuild,
  uzbl-0_pre20091130.ebuild, uzbl-9999.ebuild:
  updated dependencies

*uzbl-0_pre20091130 (04 Dec 2009)

  04 Dec 2009; Alex Alexander <wired@gentoo.org> +uzbl-0_pre20091130.ebuild:
  20091130 snapshot

*uzbl-9999 (04 Dec 2009)

  04 Dec 2009; Alex Alexander <wired@gentoo.org> +uzbl-9999.ebuild,
  +files/uzbl-9999-makefile-cleanup.patch:
  live ebuild

*uzbl-0_pre20091107 (04 Dec 2009)

  04 Dec 2009; Alex Alexander <wired@gentoo.org> +uzbl-0_pre20091107.ebuild,
  +files/uzbl-makefile-cleanup.patch, +metadata.xml:
  new ebuild
