@@ -4,6 +4,6 @@ DIST uzbl-0_pre20091107.tar.gz 129395 RMD160 d9fcf4f5a36dd027533ac42d97762547ddb
 DIST uzbl-0_pre20091130.tar.gz 131275 RMD160 f5e38a1be15e25c3fe9e12acb5f0c2c45428daa6 SHA1 8b693deec92c9ead53dce2d4f86282a49214008c SHA256 0b09bb22903da53dd04abe0344696d31b3908540249d5d0fa592c36bac79f3f2
 EBUILD uzbl-0_pre20091107.ebuild 1441 RMD160 31afcc4c801ab1379ef7eb6f8338862865cbae1c SHA1 0b0c6cb25223dad9e87b621b896d995316000c0f SHA256 52a968e88304da8102a53a325fe9bd7ca8dc9ee2dedca22e7578c146e003da98
 EBUILD uzbl-0_pre20091130.ebuild 1441 RMD160 7ead02bb2ea5840249f30e942884db89061bbf8b SHA1 f8de04469964f01fc70a223c08261fa44b335efd SHA256 259d990e966acf2525aaec5c6a244793cc2bea22664548ce15f2979fb18e79db
-EBUILD uzbl-9999.ebuild 1306 RMD160 5a1bcde4b5463f6d755f7f1fa7b85076a3de21e7 SHA1 e5dbb8f754d7225cae37d37b34c4116d3e51fe53 SHA256 a1fe6ead54b508433d1a2692965d64876b75e11e4a7cb78a0ccd987ad94f94f8
-MISC ChangeLog 993 RMD160 05a16fcd272307239f968dde7e3eaa0d1f025eea SHA1 46f9b8a2ec6c77dd5f912827aaf0fddf4292ec9d SHA256 08e9040468dd7d95788bae9e52760d30114466fd36d4bce70c66aa5aaf6369c6
-MISC metadata.xml 326 RMD160 5d1339f3972ffe7f7f079c2c1d2ed5a79c8bcd93 SHA1 ec7495900f1f7d5b1f3276ad3478150e48b249cb SHA256 bb1709bb15b6144c36ce533afc6a50a7eb41201174b77a0907ebd0ac1fa8ce4b
+EBUILD uzbl-9999.ebuild 1402 RMD160 b1f622e6fb9b09b5cfa8934493bb2e967b8f610d SHA1 56d4dc4b8b18660db3f1f3811735c5f56ffcc3f7 SHA256 583fb44cf06711b8c1f6e009215e58bfe7e885a023435665caac1afb0f082b4d
+MISC ChangeLog 1148 RMD160 a1b4800da2f83ecce59e36fee6601c8ecca6b772 SHA1 7e2d339edc18ffe13b042e132c4fae55863d28dd SHA256 aabaf152c0ade3bbab2205682399819b37a55344296a173cd63ce0de6d6e40f2
+MISC metadata.xml 387 RMD160 46473266de1d3f456cb0f97dd527940ac5e7d4c0 SHA1 6ff2bd91a8753503fa38927944c17a442116935d SHA256 9e6f1a092136b7c939fafd83d45eaf32ed7bd36ca14fe541951bf8bfedf93dc6
