@@ -7,6 +7,7 @@
 <name>Alex Alexander</name>
 </maintainer>
 <use>
+	<flag name="experimental">Enable experimental branch</flag>
 	<flag name="helpers">Optional tools used by uzbl scripts</flag>
 </use>
 </pkgmetadata>
