@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/uzbl/uzbl-9999.ebuild,v 1.2 2009/12/04 11:38:32 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/uzbl/uzbl-9999.ebuild,v 1.3 2009/12/04 14:29:05 wired Exp $
 
 EAPI="2"
 
@@ -15,7 +15,7 @@ EGIT_REPO_URI="git://github.com/Dieterbe/uzbl.git"
 LICENSE="|| ( LGPL-2.1 MPL-1.1 )"
 SLOT="0"
 KEYWORDS=""
-IUSE="helpers"
+IUSE="experimental helpers"
 
 COMMON_DEPEND="
 	>=net-libs/webkit-gtk-1.1.15
@@ -39,7 +39,13 @@ RDEPEND="
 	)
 "
 
+pkg_setup() {
+	use experimental && EGIT_BRANCH="experimental"
+}
+
 src_prepare() {
+	git_src_prepare
+
 	# patch Makefile to make it more sane
 	epatch "${FILESDIR}"/"${P}"-makefile-cleanup.patch
 
