@@ -1,6 +1,10 @@
 # ChangeLog for www-client/uzbl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/uzbl/ChangeLog,v 1.5 2009/12/04 14:04:04 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/uzbl/ChangeLog,v 1.6 2009/12/04 14:29:05 wired Exp $
+
+  04 Dec 2009; Alex Alexander <wired@gentoo.org> uzbl-9999.ebuild,
+  metadata.xml:
+  added 'experimental' USE flag that activates experimental git branch
 
   04 Dec 2009; Alex Alexander <wired@gentoo.org>
   files/uzbl-9999-makefile-cleanup.patch, files/uzbl-makefile-cleanup.patch:
